--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitepress": "^2.0.0-alpha.13"
   },
   "trustedDependencies": [
+    "esbuild",
+    "sharp",
     "unrs-resolver"
   ]
 }
